--- a/flask_wtforms_tutorial/templates/reservations.html
+++ b/flask_wtforms_tutorial/templates/reservations.html
@@ -7,8 +7,13 @@
 {% block content %}
 <div class="formwrapper">
   <h2 class="title">Reserve Your Seat</h2>
-  
-  <form method="POST" action="/admin">
+  {% if chart %}
+    <div id="chart">
+      Congratulations on a successful booking! Here is your confirmation number: 
+      {{ chart }}
+    </div>
+  {% endif %}
+  <form method="POST" action="/reservations">
       {{ form.csrf_token }}
       <div class="form-field">{{ form.first_name.label }} {{ form.first_name }}
         {% if form.first_name.errors %}
@@ -49,6 +54,7 @@
       
       {{ form.reserve }}
   </form>
+
   <div class="home">
       <a class="home" href="/">Click here to go back to Homepage</a>
   </div>
