--- a/flask_wtforms_tutorial/templates/admin.html
+++ b/flask_wtforms_tutorial/templates/admin.html
@@ -31,8 +31,6 @@
       
       {{ form.login }}
   </form>
-  <div class="home">
-      <a class="home" href="/">Click here to go back to Homepage</a>
-  </div>
+  <a class="home" href="/">Click here to go back to the homepage!</a>
 </div>
 {% endblock %}
