--- a/flask_wtforms_tutorial/templates/reservations.html
+++ b/flask_wtforms_tutorial/templates/reservations.html
@@ -8,7 +8,7 @@
 <div class="formwrapper">
   <h2 class="title">Reserve Your Seat</h2>
   
-  <form method="POST" action="/admin">
+  <form method="POST" action="/reservations">
       {{ form.csrf_token }}
       <div class="form-field">{{ form.first_name.label }} {{ form.first_name }}
         {% if form.first_name.errors %}
@@ -49,6 +49,11 @@
       
       {{ form.reserve }}
   </form>
+  {% if chart %}
+  <div id="chart">
+    Reservation code: {{ chart }}
+  </div>
+  {% endif %}
   <a class="home" href="/">Click here to go back to the homepage!</a>
 </div>
 {% endblock %}
