--- a/flask_wtforms_tutorial/templates/reservations.html
+++ b/flask_wtforms_tutorial/templates/reservations.html
@@ -15,6 +15,11 @@
     Your reservation is for {{ info }}
   </div>
   {% endif %}
+  {% if mapVar %}
+  <div id="mapVar">
+    {{ mapVar }}
+  </div>
+  {% endif %}
   <form method="POST" action="/reservations">
       {{ form.csrf_token }}
       <div class="form-field">{{ form.first_name.label }} {{ form.first_name }}
